--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -15,7 +15,29 @@ builds:
     goarch:
       - amd64
     dir: .
+    ldflags:
+      - -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{.CommitDate}} -X main.builtBy=goreleaser
 
 archives:
   - replacements:
       amd64: x86_64
+
+brews:
+  - tap:
+      owner: reegnz
+      name: homebrew-tap
+    homepage: https://github.com/reegnz/redraw
+    description: "An interactive terminal tool to filter and redraw output continuously."
+    license: "MIT"
+    commit_author:
+      name: Zoltán Reegn
+      email: zoltan.reegn@gmail.com
+
+nfpms:
+  - homepage: https://github.com/reegnz/redraw
+    description: "An interactive terminal tool to filter and redraw output continuously."
+    license: "MIT"
+    formats:
+      - apk
+      - deb
+      - rpm
